models_ricker/ricker_seasonal_coe/hagrid/ricker_seasonal_coe/stationary/output/stdout/job-523646.err
  File "../../sim_stat_hag.py", line 43
    print sys.argv[1]
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(sys.argv[1])?
